# PuMA

./: INSTALL  Makefile  Makefile.in  README  VERSION  combine.pl  config.status  configure  configure.in  index.html  params.json  puma.pl
docs/: HOWTO.txt
pipeline/: Configuration.pm  Tiny.pm  convert_output.pl  fastq2fasta.pl  run_bowtie2.pl  run_cutadapt.pl  run_diamond.pl  run_megan.pl
